card-text style needed position set to relative, this corrects overlap from title over card text

--- a/assets/stylesheets/components/_cards.scss
+++ b/assets/stylesheets/components/_cards.scss
@@ -189,7 +189,8 @@
 
   .card-text {
     font-size: .9375rem;;
-
+    position: relative;
+    
     address {
       font-size: $font-size-small;
       background: transparent;
